Fixed datepicker arrows, aligned user search form 261

--- a/src/styles/boot.less
+++ b/src/styles/boot.less
@@ -3,8 +3,6 @@ body {
 }
 
 @import "../../components/bower/bootstrap/less/bootstrap.less";
-@import "../../components/bower/bootstrap/less/responsive-embed.less";
-@import "../../components/bower/bootstrap/less/responsive-utilities.less";
 @import "../../components/bower/font-awesome/less/font-awesome.less";
 
 // do not collapse until it reaches a smaller value
@@ -43,28 +41,6 @@ div.tab-pane {
 div.ag-datepicker {
   input {
     width: 170px;
-  }
-}
-
-// Icon aliases for angular-ui/bootstrap
-// to make it backward compatible with bootstrap 2.x
-.glyphicon {
-  font-family: "FontAwesome";
-
-  &.glyphicon-chevron-left {
-    &:extend(.fa-chevron-left);
-  }
-
-  &.glyphicon-chevron-left:before {
-    &:extend(.fa-chevron-left:before);
-  }
-
-  &.glyphicon-chevron-right {
-    &:extend(.fa-chevron-right);
-  }
-
-  &.glyphicon-chevron-right:before {
-    &:extend(.fa-chevron-right:before);
   }
 }
 
